--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <div class="card">
             <h1>Supervisor</h1>
             <p>Monitors activity</p>
-            <img src="" alt="">
+            <img src="images/icon-supervisor.svg" alt="">
         </div>
         <div class="card">
             <h1>Team Builder</h1>
             <p>Scans out talent</p>
-            <img src="" alt="">
+            <img src="images/icon-team-builder.svg" alt="">
         </div>
         <div class="card">
             <h1>Karma</h1>
             <p>Regular evaluation</p>
-            <img src="" alt="">
+            <img src="images/icon-karma.svg" alt="">
         </div>
         <div class="card">
             <h1>Calcuator</h1>
             <p>Uses data from past projects</p>
-            <img src="" alt="">
+            <img src="images/icon-calculator.svg" alt="">
         </div>
     </section>
 </body>
